# xrun

./: DesktopFileSearch.vala  Searcher.vala  Window.vala  XRun.vala  meson.build  searcher.gresources.xml  window.ui  xrun.gresources.xml
ui/: window.ui
